<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱宠</string>
    <string name="action_settings">设置</string>
    <string name="splash_desc">启动界面</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="guide_desc">引导界面</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="guide_btn_enter">立即体验</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_welcome_register_or_login">WelcomeRegisterOrLoginActivity</string>
    <string name="login_connect_sina">微博账号登录</string>
    <string name="qq_login">QQ账号登录</string>
    <string name="title_login">登录</string>
    <string name="account">账号:</string>
    <string name="input_account_hint">请输入邮箱</string>
    <string name="password">密码:</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="login_toggle_password_show">显示</string>
    <string name="login_toggle_password_hide">隐藏</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="ok_button">确定</string>
    <string name="login_empty_account">账号不能为空</string>
    <string name="login_empty_password">密码不能为空</string>
    <string name="login_failure_other">登录失败</string>
    <string name="login_failure_auth">用户名或密码不正确</string>
    <string name="login_loading">正在登录...</string>
    <string name="main_home_title">首页</string>
    <string name="main_find_title">发现</string>
    <string name="main_camera_title">拍照</string>
    <string name="main_conversation_title">消息</string>
    <string name="main_me_title">我的</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">释放可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉刷新</string>
    <string name="drop_to_more_label">更多</string>
    <string name="drop_to_more_load_label">加载中...</string>
    <string name="me_into_profile">详细</string>
    <string name="me_into_profile2">资料</string>
    <string name="default_num_zero">0</string>
    <string name="me_feeds_label">相册</string>
    <string name="me_followers_label">关注</string>
    <string name="me_fans_label">粉丝</string>
    <string name="me_friends_label">好友</string>
    <string name="title_activity_set_user_info">SetUserInfoActivity</string>
    <string name="me_set_info_title">编辑个人资料</string>
    <string name="title_activity_set_user_nick_name">SetUserNickNameActivity</string>
    <string name="me_set_info_nickname_title">编辑昵称</string>
    <string name="btn_save">保存</string>
    <string name="nickname_empty">昵称不能为空</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_register">用户注册</string>
    <string name="register">注册</string>
    <string name="repassword">重复:</string>
    <string name="input_repassword_hint">请重复密码</string>
    <string name="nickname">昵称</string>
    <string name="input_nickname_hint">请输入昵称</string>
    <string name="reg_repassword_error">重复密码不一致</string>
    <string name="nickname_no_empty">昵称不能为空</string>
    <string name="reg_loading">正在注册...</string>
    <string name="reg_failure_other">注册失败</string>
    <string name="reg_failure_sameAccount">邮箱已被注册了</string>
    <string name="empty">无数据</string>

    <!-- path -->
    <string name="login_btn">登录</string>
    <string name="login_register">注册</string>
    <string name="app_version">v%1sBeta</string>
    <string name="take_picture">拍照</string>
    <string name="choose_gallery">从手机相册选择</string>
    <string name="cancel">取消</string>
    <string name="camera_title">请选择</string>
    <string name="title_activity_main_pop_dialog">MainPopDialog</string>
    <string name="menu_logout">注销</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="feedback">意见反馈</string>
    <string name="submit">提交</string>
    <string name="submit_loading">提交中...</string>
    <string name="feedback_no_empty">意见内容不能为空</string>
    <string name="feedback_success">意见提交成功</string>
    <string name="feedback_failure">意见提交失败</string>
    <string name="upload_loading">正在上传</string>
    <string name="save_loading">正在保存...</string>

    <!-- update -->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="title_activity_photo_view">PhotoViewActivity</string>
    <string name="title_activity_publish_feed">PublishFeedActivity</string>
    <string name="title_publish">发布照片</string>
    <string name="publish">发布</string>
    <string name="publish_loading">发布中...</string>
    <string name="likedNum">%1s 个赞</string>
    <string name="commentNum">查看全部  %1s 条评论</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_comment">评论</string>

</resources>
