<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.ipet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <com.ipet.android.ui.common.SimpleTitleBar
        android:id="@+id/login_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/title_login"
        app:title_left_res_visibility="visible"
        app:title_right_res_type="text"
        app:title_right_res_visibility="visible"
        app:title_right_text="@string/login_register" />

    <LinearLayout
        android:id="@+id/login_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_titlebar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/setting_list_top_bg_white"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/account"
                android:textColor="@color/font_black"
                android:textSize="16sp" />

            <AutoCompleteTextView
                android:id="@+id/login_account"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1.0"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_account_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/font_black"
                android:textColorHint="@color/font_input_hint"
                android:textSize="16sp"
                android:windowSoftInputMode="stateHidden" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/setting_list_bottom_bg_white"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16sp"
                android:text="@string/password"
                android:textColor="@color/font_black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_weight="1.0"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/font_black"
                android:textColorHint="@color/font_input_hint"
                android:textSize="16sp"
                android:windowSoftInputMode="stateHidden" />

            <TextView
                android:id="@+id/login_toggle_password"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:background="@drawable/login_toggle_password_bg"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/login_toggle_password_show"
                android:textColor="@color/font_black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>



    <TextView
        android:id="@+id/login_forgot_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_linearLayout"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:paddingBottom="2dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="2dp"
        android:text="@string/forgot_password"
        android:textColor="@color/font_welcome_blue"
        android:textSize="16sp" />
    
   <TextView
        android:id="@+id/login_login_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_forgot_password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/welcome_reg_btn"
        android:gravity="center"
        android:text="@string/ok_button"
        android:textColor="@drawable/font_black_pressed_white"
        android:textSize="18sp" />

</RelativeLayout>